--- a/apGenshin.html
+++ b/apGenshin.html
@@ -1,9 +1,35 @@
 <!DOCTYPE HTML>
 <html>
     <head>
-
+        <link rel="stylesheet" href="./assets/css/banner.css" />
     </head>
     <body>
-        
+        <div id="cb-banner" role="banner" tabindex="=1">
+            <div class="banner-content no-shrink">
+                <div class="cbBox">
+                    <div class="menu-control" aria-label="Open navbar">
+                        <a>
+                            <i class="arrow-down"></i>
+                        </a>
+                    </div>
+                    <div class="cb-logo">
+                        <img src="./assets/images/collegeboardLogo.svg" aria-label="CB Logo"/>
+                    </div>
+                    <div class="ap-logo">
+                        <img src="assets/images/apLogo.svg" aria-label="AP Logo"/>
+                    </div>
+                </div>
+                <div class="signBox self-align">
+                    <a class="login-box transparent">
+                        <span class="sign-in">
+                            Sign In
+                        </span>
+                        <span class="glyph" aria-label="Sign in logo">
+                            
+                        </span>
+                    </a>
+                </div>
+            </div>
+        </div>
     </body>
 </html>
