Finished AP Students banner

--- a/apGenshin.html
+++ b/apGenshin.html
@@ -13,10 +13,10 @@
                         </a>
                     </div>
                     <div class="cb-logo">
-                        <img src="./assets/images/collegeboardLogo.svg" aria-label="CB Logo"/>
+                        <img src="./assets/images/collegeboardLogo.svg" aria-label="CB Logo" class="noDrag"/>
                     </div>
                     <div class="ap-logo">
-                        <img src="assets/images/apLogo.svg" aria-label="AP Logo"/>
+                        <img src="assets/images/apLogo.svg" aria-label="AP Logo" class="noDrag"/>
                     </div>
                 </div>
                 <div class="signBox self-align">
@@ -24,10 +24,23 @@
                         <span class="sign-in">
                             Sign In
                         </span>
-                        <span class="glyph" aria-label="Sign in logo">
-                            
+                        <span class="glyph bbox" aria-label="Sign in logo">
+                            <img src="./assets/images/user.png" class="noDrag userPhoto" />
                         </span>
                     </a>
+                    <div class="search-box bbox">
+                        <input 
+                            name="idkGiveMeAName"
+                            type="text"
+                            autocomplete="off"
+                            autocapitalize="off"
+                            placeholder="Search"
+                            class="search-input"
+                        />
+                        <a aria-label="Search" class="search-btn">
+                            <img src="./assets/images/search.png" />
+                        </a>
+                    </div>
                 </div>
             </div>
         </div>
