--- a/apGenshin.html
+++ b/apGenshin.html
@@ -54,6 +54,38 @@
                             AP Students
                         </a>
                     </span>
+                    <ul class="nav-items">
+                        <li class>
+                            <a class="nav-link-object">
+                                Home
+                            </a>
+                        </li>
+                        <li class>
+                            <a class="nav-link-object">
+                                Getting Started
+                            </a>
+                        </li>
+                        <li class>
+                            <a class="nav-link-object">
+                                Courses & Exams
+                            </a>
+                        </li>
+                        <li class>
+                            <a class="nav-link-object">
+                                Taking Exams
+                            </a>
+                        </li>
+                        <li class>
+                            <a class="nav-link-object">
+                                Scores
+                            </a>
+                        </li>
+                        <li class>
+                            <a class="nav-link-object">
+                                Credit & Placement
+                            </a>
+                        </li>
+                    </ul>
                 </nav>
             </div>
         </div>
