Added nav location bar and finished nav hover

--- a/apGenshin.html
+++ b/apGenshin.html
@@ -3,6 +3,7 @@
     <head>
         <link rel="stylesheet" href="./assets/css/banner.css" />
         <link rel="stylesheet" href="./assets/css/navbar.css" />
+        <link rel="stylesheet" href="./assets/css/background.css" />
     </head>
     <body>
         <div id="cb-banner" role="banner" tabindex="1">
@@ -56,36 +57,63 @@
                     </span>
                     <ul class="nav-items">
                         <li class>
-                            <a class="nav-link-object">
-                                Home
+                            <a class="nav-link-object bbox">
+                                <span>Home</span>
                             </a>
                         </li>
                         <li class>
-                            <a class="nav-link-object">
-                                Getting Started
+                            <a class="nav-link-object bbox">
+                                <span>Getting Started</span>
+                                <img src="./assets/images/down-arrow.png" class="noDrag nav-link-img" />
                             </a>
                         </li>
                         <li class>
-                            <a class="nav-link-object">
-                                Courses & Exams
+                            <a class="nav-link-object bbox nav-hl">
+                                <span>Courses & Exams</span>
                             </a>
                         </li>
                         <li class>
-                            <a class="nav-link-object">
-                                Taking Exams
+                            <a class="nav-link-object bbox">
+                                <span>Taking Exams</span>
+                                <img src="./assets/images/down-arrow.png" class="noDrag nav-link-img" />
                             </a>
                         </li>
                         <li class>
-                            <a class="nav-link-object">
-                                Scores
+                            <a class="nav-link-object bbox">
+                                <span>Scores</span>
+                                <img src="./assets/images/down-arrow.png" class="noDrag nav-link-img" />
                             </a>
                         </li>
                         <li class>
-                            <a class="nav-link-object">
-                                Credit & Placement
+                            <a class="nav-link-object bbox">
+                                <span>Credit & Placement</span>
+                                <img src="./assets/images/down-arrow.png" class="noDrag nav-link-img" />
                             </a>
                         </li>
                     </ul>
+                </nav>
+            </div>
+        </div>
+        <div id="navLocation">
+            <div class="dpad no-shrink">
+                <nav class="cb-nav" aria-label="URL But Nicer Looking">
+                    <ol class="nav-loc-list">
+                        <li>
+                            <a class="nav-loc-link">
+                                Home
+                            </a>
+                        </li>
+                        <li>
+                            <a class="nav-loc-link">
+                                Courses & Exams
+                            </a>
+                        </li>
+                        <li>
+                            <a class="nav-loc-link nav-loc-current">
+                                AP Genshin Impact
+                            </a>
+                        </li>
+                    </ol>
                 </nav>
             </div>
         </div>
