background hero added

--- a/apGenshin.html
+++ b/apGenshin.html
@@ -1,6 +1,7 @@
 <!DOCTYPE HTML>
 <html>
     <head>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="./assets/css/banner.css" />
         <link rel="stylesheet" href="./assets/css/navbar.css" />
         <link rel="stylesheet" href="./assets/css/background.css" />
@@ -115,6 +116,11 @@
                         </li>
                     </ol>
                 </nav>
+            </div>
+        </div>
+        <div id="background" class="bbox" aria-label="Generic Blue Photo of Genshin">
+            <div class="background-container">
+
             </div>
         </div>
     </body>
