Added background title text

--- a/apGenshin.html
+++ b/apGenshin.html
@@ -119,8 +119,21 @@
             </div>
         </div>
         <div id="background" class="bbox" aria-label="Generic Blue Photo of Genshin">
-            <div class="background-container">
-
+            <div class="background-container flex-center bbox">
+                <div class="background-content" aria-label="Background Words on Page">
+                    <div class="background-title">AP Genshin Impact AB</div>
+                    <p>
+                        Learn all about the course and exam. Already enrolled? Join your class in My AP.
+                    </p>
+                    <div class="background-btns">
+                        <button class="btn1">
+                            Go to My AP
+                        </button>
+                        <button class="btn2">
+                            See How to Join Your Class
+                        </button>
+                    </div>
+                </div>
             </div>
         </div>
     </body>
