Content.css and more stuff lmao

--- a/apGenshin.html
+++ b/apGenshin.html
@@ -5,6 +5,7 @@
         <link rel="stylesheet" href="./assets/css/banner.css" />
         <link rel="stylesheet" href="./assets/css/navbar.css" />
         <link rel="stylesheet" href="./assets/css/background.css" />
+        <link rel="stylesheet" href="./assets/css/content.css" />
     </head>
     <body>
         <div id="cb-banner" role="banner" tabindex="1">
@@ -133,6 +134,18 @@
                             See How to Join Your Class
                         </button>
                     </div>
+                </div>
+            </div>
+        </div>
+        <div id="main-content" tabindex="2" aria-label="Main Content">
+            <div id="not-a-student" class="bbox">
+                <div class="not-student-content main-dp">
+                    <div>
+                        Not a Student?
+                    </div>
+                    <p>
+                        <a class="link">Go to AP Central</a> for resources for teachers, administrators, and coordinators.
+                    </p>
                 </div>
             </div>
         </div>
