Added course anchor

--- a/apGenshin.html
+++ b/apGenshin.html
@@ -149,5 +149,21 @@
                 </div>
             </div>
         </div>
+        <div id="course-anchor">
+            <nav class="main-dp" aria-label="Secondary Navigation">
+                <ul>
+                    <li>
+                        <a class="course-link" style="border-bottom: 2px solid #1e1e1e;">
+                            About the Course
+                        </a>
+                    </li>
+                    <li>
+                        <a class="course-link">
+                            About the Exam
+                        </a>
+                    </li>
+                </ul>
+            </nav>
+        </div>
     </body>
 </html>
