Added skills you'll learn

--- a/apGenshin.html
+++ b/apGenshin.html
@@ -148,22 +148,62 @@
                     </p>
                 </div>
             </div>
-        </div>
-        <div id="course-anchor">
-            <nav class="main-dp" aria-label="Secondary Navigation">
-                <ul>
+            <div id="courseAnchor">
+                <nav class="main-dp" aria-label="Secondary Navigation">
+                    <ul>
+                        <li>
+                            <a class="course-link" style="border-bottom: 2px solid #1e1e1e;">
+                                About the Course
+                            </a>
+                        </li>
+                        <li>
+                            <a class="course-link">
+                                About the Exam
+                            </a>
+                        </li>
+                    </ul>
+                </nav>
+            </div>
+            <div id="aboutCourse" class="main-dp" tabindex="3" aria-label="About AP Genshin">
+                <br />
+                <br />
+                <h2 class="title-header">
+                    About the Course
+                </h2>
+                <p class="text">
+                    This course will challenge you in the knowledge of Teyvat, the people, the lands, the cultures, and most importantly, the journey.
+                </p>
+                <br />
+                <h3 class="h3-header">
+                    Skills You'll Learn
+                </h3>
+                <ul class="checkbox-list" aria-label="List of all Skills">
                     <li>
-                        <a class="course-link" style="border-bottom: 2px solid #1e1e1e;">
-                            About the Course
-                        </a>
+                        <img src="./assets/images/check.png" />
+                        <p>Analyzing calculations, equations, and nuances of interactions involving enemy and character stats</p>
                     </li>
                     <li>
-                        <a class="course-link">
-                            About the Exam
-                        </a>
+                        <img src="./assets/images/check.png" />
+                        <p>Optimizing, evaluating, and crafting team compositions</p>
+                    </li>
+                    <li>
+                        <img src="./assets/images/check.png" />
+                        <p>Putting historical developments in context and making connections between them</p>
+                    </li>
+                    <li>
+                        <img src="./assets/images/check.png" />
+                        <p>Explaining the impact and implications of each archon's interpretations of the heavenly principle</p>
+                    </li>
+                    <li>
+                        <img src="./assets/images/check.png" />
+                        <p>Reading and analyzing text and visual sources</p>
+                    </li>
+                    <li>
+                        <img src="./assets/images/check.png" />
+                        <p>Developing a claim or thesis and supporting it in an essay</p>
                     </li>
                 </ul>
-            </nav>
+            </div>
         </div>
     </body>
 </html>
