Added basics of skills necessary portion

--- a/apGenshin.html
+++ b/apGenshin.html
@@ -192,7 +192,7 @@
                     </li>
                     <li>
                         <img src="./assets/images/check.png" />
-                        <p>Explaining the impact and implications of each archon's interpretations of the heavenly principle</p>
+                        <p>Explaining the impact and implications of each archon's interpretations of the "heavenly principles"</p>
                     </li>
                     <li>
                         <img src="./assets/images/check.png" />
@@ -201,6 +201,19 @@
                     <li>
                         <img src="./assets/images/check.png" />
                         <p>Developing a claim or thesis and supporting it in an essay</p>
+                    </li>
+                </ul>
+                <h3 class="h3-header border-top">
+                    Equivalency and Prerequisites
+                </h3>
+                <ul class="checkbox-list space-between" aria-label="List of Prerequisites" tabindex="4">
+                    <li class="eq-flex">
+                        <h4 class="h4-header">College Course Equivalent</h4>
+                        <p>A one-semester introductory college course in comparative government and politics</p>
+                    </li>
+                    <li class="eq-flex">
+                        <h4 class="h4-header">Recommended Prerequisites</h4>
+                        <p>None</p>
                     </li>
                 </ul>
             </div>
