Added exam times

--- a/apGenshin.html
+++ b/apGenshin.html
@@ -216,6 +216,46 @@
                         <p>None</p>
                     </li>
                 </ul>
+                <h3 class="h3-header border-top">
+                    Exam Date
+                </h3>
+                <div class="exam-div" aria-label="List of Exam Times">
+                    <div class="exam-date">
+                        <div class="date-div sbs-flex">
+                            <img src="./assets/images/calendar.PNG" />
+                            <p>
+                                Fri, June 1, 2023, <br />
+                                8 AM Local
+                            </p>
+                        </div>
+                        <div class="name-div">
+                            <h3 class="h3-header">
+                                AP Genshin Impact AB Exam
+                            </h3>
+                            <p>
+                                This is the regularly scheduled date for the AP Genshin Impact AB Exam.
+                            </p>
+                        </div>
+                        <div class="options-div bbox sbs-flex">
+                            <div class="sbs-flex b1">
+                                <img src="./assets/images/calendar2.png" class="options-img1" />
+                                <a>
+                                    Add to Calendar
+                                </a>
+                            </div>
+                            <div class="sbs-flex b2" >
+                                <a>
+                                    Details
+                                </a>
+                                <img src="./assets/images/right-arrow.png" class="options-img2"/>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <br />
+            <div class="unit-explanation grey-bg" tabindex="5" aria-label="About the Units">
+
             </div>
         </div>
     </body>
