Genshin unit text

--- a/apGenshin.html
+++ b/apGenshin.html
@@ -254,8 +254,49 @@
                 </div>
             </div>
             <br />
-            <div class="unit-explanation grey-bg" tabindex="5" aria-label="About the Units">
-
+            <div id="unit-explanation" class="grey-bg" tabindex="5" aria-label="About the Units">
+                <br />
+                <br />
+                <br />
+                <div id="about-title" class="main-dp">
+                    <h2 class="title-header">
+                        About the Units
+                    </h2>
+                    <p>
+                        The course content outlined below is organized into commonly taught units of study that provide one possible sequence for the course. Your teacher may choose to organize the course content differently based on local priorities and preferences.
+                    </p>
+                </div>
+                <br />
+                <br />
+                <br />
+                <div class="main-dp">
+                    <h2 class="title-header unit-header">
+                        Course Content
+                        <div class="ecompress sbs-flex" aria-label="Expand All">
+                            <div class="b1 eb">
+                                Expand All
+                            </div>
+                            <div class="b2 eb" style="border-left: 1px solid var(--college-board-light-grey);">
+                                Collapse All
+                            </div>
+                        </div>
+                    </h2>
+                    <div class="unit-container" aria-label="Unit Container">
+                        <div class="unit">
+                            <div class="unit-visible">
+                                <h3 class="unit-title">
+                                    Unit 1: Before Teyvat
+                                    <div class="ecompress-btn">
+                                        +
+                                    </div>
+                                </h3>
+                                <p class="unit-text">
+                                    Waiting for Josh to give me a description >:( wejkreifuewf8ewuf98ewufqw98fyefyw wejkreifuewf8ewuf98ewufqw98fyefyw wejkreifuewf8ewuf98ewufqw98fyefyw
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </body>
