Added search AP credit policies banner

--- a/apGenshin.html
+++ b/apGenshin.html
@@ -269,7 +269,7 @@
                 <br />
                 <br />
                 <br />
-                <div class="main-dp">
+                <div class="main-dp pad-btm">
                     <h2 class="title-header unit-header">
                         Course Content
                         <div class="ecompress sbs-flex" aria-label="Expand All">
@@ -290,13 +290,123 @@
                                         +
                                     </div>
                                 </h3>
-                                <p class="unit-text">
+                                <div class="unit-text">
                                     Waiting for Josh to give me a description >:( wejkreifuewf8ewuf98ewufqw98fyefyw wejkreifuewf8ewuf98ewufqw98fyefyw wejkreifuewf8ewuf98ewufqw98fyefyw
-                                </p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="unit">
+                            <div class="unit-visible">
+                                <h3 class="unit-title">
+                                    Unit 1: Before Teyvat
+                                    <div class="ecompress-btn">
+                                        +
+                                    </div>
+                                </h3>
+                                <div class="unit-text">
+                                    Waiting for Josh to give me a description >:( wejkreifuewf8ewuf98ewufqw98fyefyw wejkreifuewf8ewuf98ewufqw98fyefyw wejkreifuewf8ewuf98ewufqw98fyefyw
+                                </div>
+                            </div>
+                        </div>
+                        <div class="unit">
+                            <div class="unit-visible">
+                                <h3 class="unit-title">
+                                    Unit 1: Before Teyvat
+                                    <div class="ecompress-btn">
+                                        +
+                                    </div>
+                                </h3>
+                                <div class="unit-text">
+                                    Waiting for Josh to give me a description >:( wejkreifuewf8ewuf98ewufqw98fyefyw wejkreifuewf8ewuf98ewufqw98fyefyw wejkreifuewf8ewuf98ewufqw98fyefyw
+                                </div>
+                            </div>
+                        </div>
+                        <div class="unit">
+                            <div class="unit-visible">
+                                <h3 class="unit-title">
+                                    Unit 1: Before Teyvat
+                                    <div class="ecompress-btn">
+                                        +
+                                    </div>
+                                </h3>
+                                <div class="unit-text">
+                                    Waiting for Josh to give me a description >:( wejkreifuewf8ewuf98ewufqw98fyefyw wejkreifuewf8ewuf98ewufqw98fyefyw wejkreifuewf8ewuf98ewufqw98fyefyw
+                                </div>
+                            </div>
+                        </div>
+                        <div class="unit">
+                            <div class="unit-visible">
+                                <h3 class="unit-title">
+                                    Unit 1: Before Teyvat
+                                    <div class="ecompress-btn">
+                                        +
+                                    </div>
+                                </h3>
+                                <div class="unit-text">
+                                    Waiting for Josh to give me a description >:( wejkreifuewf8ewuf98ewufqw98fyefyw wejkreifuewf8ewuf98ewufqw98fyefyw wejkreifuewf8ewuf98ewufqw98fyefyw
+                                </div>
+                            </div>
+                        </div>
+                        <div class="unit">
+                            <div class="unit-visible">
+                                <h3 class="unit-title">
+                                    Unit 1: Before Teyvat
+                                    <div class="ecompress-btn">
+                                        +
+                                    </div>
+                                </h3>
+                                <div class="unit-text">
+                                    Waiting for Josh to give me a description >:( wejkreifuewf8ewuf98ewufqw98fyefyw wejkreifuewf8ewuf98ewufqw98fyefyw wejkreifuewf8ewuf98ewufqw98fyefyw
+                                </div>
+                            </div>
+                        </div>
+                        <div class="unit">
+                            <div class="unit-visible">
+                                <h3 class="unit-title">
+                                    Unit 1: Before Teyvat
+                                    <div class="ecompress-btn">
+                                        +
+                                    </div>
+                                </h3>
+                                <div class="unit-text">
+                                    Waiting for Josh to give me a description >:( wejkreifuewf8ewuf98ewufqw98fyefyw wejkreifuewf8ewuf98ewufqw98fyefyw wejkreifuewf8ewuf98ewufqw98fyefyw
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
+                <br />
+                <br />
+            </div>
+            <!--Blue background-->
+            <div id="background2" class="bbox" aria-label="Search AP Credit Policies" tabindex="6">
+                <div class="background-container bbox credit-background sbs-flex center-flex">
+                    <img src="https://apstudents.collegeboard.org/modules/site/apstudent_course/images/creditsearch.v6@2x.png" class="ap-phone-img" />
+                    <div class="ap-credit-text">
+                        <div class="ap-search-icon">
+                            <img src="./assets/images/cbSearch.png" />
+                        </div>
+                        <div class="ap-search-title">
+                            <h2 class="white-h2">
+                                Search AP Credit Policies
+                            </h2>
+                            <p>
+                                Find colleges that grant credit and/or placement for AP Exam scores in this and other AP courses.
+                            </p>
+                        </div>
+                        <div class="ap-search-btn-div">
+                            <button class="btn2">Start a Search</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div id="courseResources" class="main-dp" tabindex="7" aria-label="Course Resource Links">
+                <br />
+                <br />
+                <br />
+                <h2 class="title-header">
+                    Course Resources
+                </h2>
             </div>
         </div>
     </body>
